--- a/style.css
+++ b/style.css
@@ -1,135 +1,166 @@
+:root {
+    --primary-text-color :#212121;
+    --primary-whity-color :#ffffff;
+    --accent-color :#2196F3;
+    --link-color :#757575;
+    --logo-color :#000000;
+    --bgr-color :#2F303A;
 
+}
 body {
-    margin: 0 auto;
-    padding: 0;
+    background-color: var(--primary-whity-color);
     font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    line-height: 1.714em;
-    letter-spacing: 0.03em;
-    width: 1600px;
-    height: auto;
+    font-style: normal;
+    color: var(--primary-text-color);
 }
-a {
-   text-decoration: none;
-   color: rgb(0, 0, 0); 
-}
-.table {
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: left;
-
-}
-
-.header {
-    display: flex;
-    height: 80px;
-    width: 1600px;
-}
-.logo-color {
-    color: #2196F3;
-}
+/* header страницы index и portfolio */
 .logo-header {
     font-family: 'Raleway';
     font-weight: 700;
     font-size: 26px;
-    line-height: 1.192em;
-    padding: 24px 0 25px 215px;
-    margin-right: 53px;
+    line-height: 1.192;
+    color: var(--logo-color);
+    letter-spacing: 0.03em;
+}
+.logo-color {
+    color: var(--accent-color);
 }
 .table-nav {
-    margin: 32px 0;
-    font-family: 'Roboto';
-    font-style: normal;
     font-weight: 500;
+    font-size: 14px;
+    line-height: 1.142;
     letter-spacing: 0.02em;
+    color: var(--primary-text-color);
 }
-.table-nav a,
-.table-info a {
-    padding-left: 50px;
+.table-info-link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+    color: var(--link-color);
 }
-.table-info {
-    padding-left: 291px;
-}
-.table-info a{
-    color: #757575;
-}
-.table-nav a:hover,
-.table-info a:hover {
-    color: #2196F3;
+.table-nav:hover,
+.table-nav:focus,
+.table-info-link:hover,
+.table-info-link:focus {
+    color: var(--accent-color);
 }
 .main-section {
-    background-color: #2F303A;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 1600px;
-    height: 600px; 
+    background-color: var(--bgr-color);
 }
-.main-section h1 {
-    font-family: 'Roboto';
-    font-style: normal;
+.main-title {
     font-weight: 900;
     font-size: 44px;
-    letter-spacing: 0.06em;
-    line-height: 1.32em;
-    color: #fff;
+    line-height: 1.363;
     text-align: center;
+    letter-spacing: 0.06em;
     text-transform: uppercase;
+    color: var(--primary-whity-color);
 }
-.main-section button {
-    background-color: #2196F3;
-    color: #fff;
-    width: 200px;
-    height: 50px;
-    font-family: 'Roboto';
+/* main страницы index */
+.main-btm {
+    background-color: var(--accent-color);
     font-weight: 700;
-    letter-spacing: 2px;
     font-size: 16px;
-    line-height: 1.875em;
-    border-radius: 4px;
-    border: #2196F3;
+    line-height: 1.875;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: var(--primary-whity-color);
+    cursor: pointer;
 }
-.section-info {
-    width: 1170px;
-    height: 101px;
-    margin: 94px 215px 94px 215px; 
-}
-.section-info li {
-    width: 270px;
-    height: 101px;
-    justify-content: space-between;
-    padding-left: 30px;
-}
-.section-info h3 {
-    font-family: 'Roboto';
-    font-style: normal;
+.main-subtitle {
     font-weight: 700;
     font-size: 14px;
-    line-height: 1.14em;
+    line-height: 1.142;
+    letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #212121;
-    margin: 0 0 10px 0;
+    color: var(--primary-text-color);
 }
-.section-info p {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
+.main-text {
     font-size: 14px;
-    line-height: 1.714em;
+    line-height: 1.714;
     letter-spacing: 0.03em;
     color: #757575;
-    margin-top: 0px;
 }
-.section-info ul{
-    padding:0;
-    margin: 0;
+.section-subtitle {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.166;
+    text-align: center;
+    letter-spacing: 0.03em;
 }
+.section-trainer {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.187;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color);
+}
+.coach-profession {
+    font-size: 16px;
+    line-height: 1.187;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-align: center;
+    color: var(--link-color);
+}
+/* footer страницы index и portfolio */
+.footer {
+    background-color: var(--bgr-color);
+}
+.footer-logo {
+    font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.192;
+    letter-spacing: 0.03em;
+    color: var(--primary-whity-color);
+}
+.footer-logo-color {
+    color: var(--accent-color);
+}
+.footer-addres {
+    font-size: 14px;
+    line-height: 1.714;
+    letter-spacing: 0.03em;
+    color: var(--primary-whity-color);
 
-
-
-
-
-
+}
+.footer-info-link {
+    font-size: 14px;
+    line-height: 1.714;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+}
+.footer-info-link:hover,
+.footer-info-link:focus {
+    color: rgba(255, 255, 255, 0.7);
+}
+/* main страницы portfolio */
+.main-btm-content {
+    background-color: #F5F4FA;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.625;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color);
+}
+.activ-btm {
+    background-color: var(--accent-color);
+    color: var(--primary-whity-color);
+}
+.main-project {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 36px;
+    letter-spacing: 0.06em;
+    color: var(--primary-text-color);
+}
+.main-web {
+    font-size: 16px;
+    line-height: 30px;
+    letter-spacing: 0.03em;
+    color: var(--link-color);
+}
