--- a/style.css
+++ b/style.css
@@ -5,13 +5,21 @@
     --link-color :#757575;
     --logo-color :#000000;
     --bgr-color :#2F303A;
+    --secondary-bgr-color :#F5F4FA;
 
 }
 body {
-    background-color: var(--primary-whity-color);
     font-family: 'Roboto', sans-serif;
     font-style: normal;
+    font-size: 14px;
+    background-color: var(--primary-whity-color);
     color: var(--primary-text-color);
+}
+ul {
+    list-style: none;
+}
+header .activ {
+    color: var(--accent-color);
 }
 /* header страницы index и portfolio */
 .logo-header {
@@ -21,6 +29,7 @@ body {
     line-height: 1.192;
     color: var(--logo-color);
     letter-spacing: 0.03em;
+    text-decoration: none;
 }
 .logo-color {
     color: var(--accent-color);
@@ -31,6 +40,7 @@ body {
     line-height: 1.142;
     letter-spacing: 0.02em;
     color: var(--primary-text-color);
+    text-decoration: none;
 }
 .table-info-link {
     font-weight: 500;
@@ -38,6 +48,7 @@ body {
     line-height: 16px;
     letter-spacing: 0.02em;
     color: var(--link-color);
+    text-decoration: none;
 }
 .table-nav:hover,
 .table-nav:focus,
@@ -47,6 +58,7 @@ body {
 }
 .main-section {
     background-color: var(--bgr-color);
+    text-align: center;
 }
 .main-title {
     font-weight: 900;
@@ -82,6 +94,9 @@ body {
     letter-spacing: 0.03em;
     color: #757575;
 }
+.trainer {
+    background-color: var(--secondary-bgr-color);
+}
 .section-subtitle {
     font-weight: 700;
     font-size: 36px;
@@ -116,6 +131,7 @@ body {
     line-height: 1.192;
     letter-spacing: 0.03em;
     color: var(--primary-whity-color);
+    text-decoration: none;
 }
 .footer-logo-color {
     color: var(--accent-color);
@@ -132,10 +148,11 @@ body {
     line-height: 1.714;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
+    text-decoration: none;
 }
 .footer-info-link:hover,
 .footer-info-link:focus {
-    color: rgba(255, 255, 255, 0.7);
+    color: rgba(255, 255, 255, 0.9);
 }
 /* main страницы portfolio */
 .main-btm-content {
@@ -146,6 +163,11 @@ body {
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--primary-text-color);
+}
+.main-btm-content:hover,
+.main-btm-content:focus {
+    background-color: var(--accent-color);
+    color: var(--primary-whity-color);  
 }
 .activ-btm {
     background-color: var(--accent-color);
